docs/0.17/_sources/api/gammapy.modeling.models.LightCurveTemplateTemporalModel.rst.txt
LightCurveTemplateTemporalModel
===============================

.. currentmodule:: gammapy.modeling.models

.. autoclass:: LightCurveTemplateTemporalModel
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~LightCurveTemplateTemporalModel.covariance
      ~LightCurveTemplateTemporalModel.default_parameters
      ~LightCurveTemplateTemporalModel.parameters
      ~LightCurveTemplateTemporalModel.tag

   .. rubric:: Methods Summary

   .. autosummary::

      ~LightCurveTemplateTemporalModel.__call__
      ~LightCurveTemplateTemporalModel.copy
      ~LightCurveTemplateTemporalModel.create
      ~LightCurveTemplateTemporalModel.evaluate
      ~LightCurveTemplateTemporalModel.from_dict
      ~LightCurveTemplateTemporalModel.from_parameters
      ~LightCurveTemplateTemporalModel.integral
      ~LightCurveTemplateTemporalModel.read
      ~LightCurveTemplateTemporalModel.sample_time
      ~LightCurveTemplateTemporalModel.time_sum
      ~LightCurveTemplateTemporalModel.to_dict
      ~LightCurveTemplateTemporalModel.write

   .. rubric:: Attributes Documentation

   .. autoattribute:: covariance
   .. autoattribute:: default_parameters
   .. autoattribute:: parameters
   .. autoattribute:: tag

   .. rubric:: Methods Documentation

   .. automethod:: __call__
   .. automethod:: copy
   .. automethod:: create
   .. automethod:: evaluate
   .. automethod:: from_dict
   .. automethod:: from_parameters
   .. automethod:: integral
   .. automethod:: read
   .. automethod:: sample_time
   .. automethod:: time_sum
   .. automethod:: to_dict
   .. automethod:: write
