docs/1.0.2/_sources/api/gammapy.modeling.models.LightCurveTemplateTemporalModel.rst.txt
LightCurveTemplateTemporalModel
===============================

.. currentmodule:: gammapy.modeling.models

.. autoclass:: LightCurveTemplateTemporalModel
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~LightCurveTemplateTemporalModel.covariance
      ~LightCurveTemplateTemporalModel.default_parameters
      ~LightCurveTemplateTemporalModel.frozen
      ~LightCurveTemplateTemporalModel.parameters
      ~LightCurveTemplateTemporalModel.reference_time
      ~LightCurveTemplateTemporalModel.t_ref
      ~LightCurveTemplateTemporalModel.tag
      ~LightCurveTemplateTemporalModel.type

   .. rubric:: Methods Summary

   .. autosummary::

      ~LightCurveTemplateTemporalModel.__call__
      ~LightCurveTemplateTemporalModel.copy
      ~LightCurveTemplateTemporalModel.evaluate
      ~LightCurveTemplateTemporalModel.freeze
      ~LightCurveTemplateTemporalModel.from_dict
      ~LightCurveTemplateTemporalModel.from_parameters
      ~LightCurveTemplateTemporalModel.from_table
      ~LightCurveTemplateTemporalModel.integral
      ~LightCurveTemplateTemporalModel.plot
      ~LightCurveTemplateTemporalModel.read
      ~LightCurveTemplateTemporalModel.reassign
      ~LightCurveTemplateTemporalModel.sample_time
      ~LightCurveTemplateTemporalModel.time_sum
      ~LightCurveTemplateTemporalModel.to_dict
      ~LightCurveTemplateTemporalModel.to_table
      ~LightCurveTemplateTemporalModel.unfreeze
      ~LightCurveTemplateTemporalModel.write

   .. rubric:: Attributes Documentation

   .. autoattribute:: covariance
   .. autoattribute:: default_parameters
   .. autoattribute:: frozen
   .. autoattribute:: parameters
   .. autoattribute:: reference_time
   .. autoattribute:: t_ref
   .. autoattribute:: tag
   .. autoattribute:: type

   .. rubric:: Methods Documentation

   .. automethod:: __call__
   .. automethod:: copy
   .. automethod:: evaluate
   .. automethod:: freeze
   .. automethod:: from_dict
   .. automethod:: from_parameters
   .. automethod:: from_table
   .. automethod:: integral
   .. automethod:: plot
   .. automethod:: read
   .. automethod:: reassign
   .. automethod:: sample_time
   .. automethod:: time_sum
   .. automethod:: to_dict
   .. automethod:: to_table
   .. automethod:: unfreeze
   .. automethod:: write
